crates/test-framework/src/spicetest/datasets/snapshots/test_framework__spicetest__datasets__worker__spice.ai_tpcds_q85.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
expression: records_pretty
---
+-------------------------------------------------+----------------------------+-----------------------------------+-------------------------+
| substr(reason.r_reason_desc,Int64(1),Int64(20)) | avg(web_sales.ws_quantity) | avg(web_returns.wr_refunded_cash) | avg(web_returns.wr_fee) |
+-------------------------------------------------+----------------------------+-----------------------------------+-------------------------+
| Stopped working                                 | 18.0                       | 29.150000                         | 57.690000               |
| Wrong size                                      | 7.0                        | 29.240000                         | 14.810000               |
+-------------------------------------------------+----------------------------+-----------------------------------+-------------------------+
