crates/test-framework/src/spicetest/datasets/snapshots/test_framework__spicetest__datasets__worker__spice.ai_tpcds_q86.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
expression: records_pretty
---
+--------------+-------------+---------+--------------+--------------------+
| total_sum    | i_category  | i_class | lochierarchy | rank_within_parent |
+--------------+-------------+---------+--------------+--------------------+
| 325484115.55 |             |         | 2            | 1                  |
| 33787327.06  | Shoes       |         | 1            | 1                  |
| 33686392.79  | Music       |         | 1            | 2                  |
| 32806114.19  | Electronics |         | 1            | 3                  |
| 32772210.55  | Men         |         | 1            | 4                  |
| 32363931.24  | Jewelry     |         | 1            | 5                  |
| 32304101.38  | Books       |         | 1            | 6                  |
| 32244951.32  | Women       |         | 1            | 7                  |
| 31697270.31  | Children    |         | 1            | 8                  |
| 31652231.77  | Sports      |         | 1            | 9                  |
+--------------+-------------+---------+--------------+--------------------+
