crates/test-framework/src/spicetest/datasets/snapshots/test_framework__spicetest__datasets__worker__spice.ai_tpcds_q88.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
expression: records_pretty
---
+------------+------------+-------------+--------------+--------------+--------------+--------------+--------------+
| h8_30_to_9 | h9_to_9_30 | h9_30_to_10 | h10_to_10_30 | h10_30_to_11 | h11_to_11_30 | h11_30_to_12 | h12_to_12_30 |
+------------+------------+-------------+--------------+--------------+--------------+--------------+--------------+
| 2518       | 4940       | 4874        | 8248         | 7435         | 4166         | 4425         | 5144         |
+------------+------------+-------------+--------------+--------------+--------------+--------------+--------------+
