crates/test-framework/src/spicetest/datasets/snapshots/test_framework__spicetest__datasets__worker__spice.ai_tpcds_q9.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
expression: records_pretty
---
+-----------+------------+------------+------------+------------+
| bucket1   | bucket2    | bucket3    | bucket4    | bucket5    |
+-----------+------------+------------+------------+------------+
| 39.586662 | 116.114976 | 192.439186 | 267.187662 | 342.966759 |
+-----------+------------+------------+------------+------------+
