crates/test-framework/src/spicetest/datasets/snapshots/test_framework__spicetest__datasets__worker__spice.ai_tpcds_q91.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
expression: records_pretty
---
+------------------+------------------+--------------+--------------+
| Call_Center      | Call_Center_Name | Manager      | Returns_Loss |
+------------------+------------------+--------------+--------------+
| AAAAAAAABAAAAAAA | NY Metro         | Bob Belcher  | 3803.30      |
| AAAAAAAAEAAAAAAA | North Midwest    | Larry Mccray | 3486.41      |
| AAAAAAAAEAAAAAAA | North Midwest    | Larry Mccray | 490.38       |
+------------------+------------------+--------------+--------------+
