crates/test-framework/src/spicetest/datasets/snapshots/test_framework__spicetest__datasets__worker__spice.ai_tpcds_q93.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
expression: records_pretty
---
+----------------+----------+
| ss_customer_sk | sumsales |
+----------------+----------+
| 159            | 0.00     |
| 810            | 0.00     |
| 960            | 0.00     |
| 1138           | 0.00     |
| 1165           | 0.00     |
| 2538           | 0.00     |
| 2723           | 0.00     |
| 2955           | 0.00     |
| 2958           | 0.00     |
| 3124           | 0.00     |
+----------------+----------+
