crates/test-framework/src/spicetest/datasets/snapshots/test_framework__spicetest__datasets__worker__spice.ai_tpcds_q95.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
expression: records_pretty
---
+-------------+---------------------+------------------+
| order count | total shipping cost | total net profit |
+-------------+---------------------+------------------+
| 3           | 17845.49            | 4454.26          |
+-------------+---------------------+------------------+
